# KB

./: .gitignore  Makefile  README.md  kb  kb.cabal  kb.ini.example  kb.py  kblib.sh  todo
clay/: Colors.hs  Config.hs  Header.hs  Main.hs  Note.hs  Sidebar.hs  Util.hs
db/: haxby.conf  pg.conf
db/databases/kb/: init.sql
db/databases/kb/data.d/: 01_person.sql
db/databases/kb/schemas.d/: 01_main.sql
doc/: todo
scripts/: run.sh  setup.sh
static/: auth.js  completer.js  global.js  index.html  main.js  notes.js  ref_editor.js  test.html  time.js
static/test/: editable.html
web/: .gitignore  kb.py
web/db/: haxby.conf
web/db/databases/kb/: init.sql
web/db/databases/kb/schemas.d/: 01_init.sql  01_main.sql
web/doc/: todo
web/static/: form.js  global.js  index.html  main.css  main.js  net.js  notes.js
web/static/view/: base.js  tabs.js
