
name:           kb
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       KB
tested-with:    GHC == 7.6.2

Executable gen-css
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   clay
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base >= 4   && < 5,
    clay >= 0.5 && < 1.0
  default-extensions:
    TupleSections
    LambdaCase
    OverloadedStrings

